--- a/SocialWeave/Views/Home/Index.cshtml
+++ b/SocialWeave/Views/Home/Index.cshtml
@@ -1,8 +1,8 @@
-﻿    @using SocialWeave.Extensions
-    @using SocialWeave.Models.ConcreteClasses
-    @using SocialWeave.Helpers;
+﻿@using SocialWeave.Extensions
+@using SocialWeave.Models.ConcreteClasses
+@using SocialWeave.Helpers;
 
-    @model IEnumerable<SocialWeave.Models.AbstractClasses.Post>
+@model IEnumerable<SocialWeave.Models.AbstractClasses.Post>
 
 @{
     var amountOfPostsHelper = ViewData["AmountOfPostsHelper"] as AmountOfPostsHelper;
@@ -28,7 +28,6 @@
         justify-content: space-between;
     }
 
-
     .btn-deep-dark {
         background-color: #1a1a1a;
         color: #ffffff;
@@ -42,7 +41,6 @@
 
 @if (User.Identity.IsAuthenticated)
 {
-
     @if (Model == null)
     {
         <div class="text-center">
@@ -87,13 +85,13 @@
                                     @if (post.Likes != null && post.Likes.Any(l => l.User.Name == User.Identity.Name))
                                     {
                                         <form method="post" asp-action="Dislike" asp-route-id="@post.Id" asp-controller="Post" class="me-3">
-                                            <button class="text-xxl-end btn btn-purple" type="submit"><i class="bi bi-heart-fill text-danger"></i> <span class="m-0 text-danger">@post.Likes.CountLikes()</span></button>
+                                            <button class="text-xxl-end btn btn-like" type="submit"><i class="bi bi-heart-fill text-danger"></i> <span class="m-0 text-danger">@post.Likes.CountLikes()</span></button>
                                         </form>
                                     }
                                     else
                                     {
                                         <form method="post" asp-action="Like" asp-route-id="@post.Id" asp-controller="Post" class="me-3">
-                                            <button type="submit" class="btn btn-purple"><i class="bi bi-heart text-danger"></i> <span class="m-0 text-danger">@post.Likes.CountLikes()</span></button>
+                                            <button type="submit" class="btn btn-like"><i class="bi bi-heart text-danger"></i> <span class="m-0 text-danger">@post.Likes.CountLikes()</span></button>
                                         </form>
                                     }
                                 </div>
@@ -146,113 +144,113 @@
                                 </div>
                             </div>
                         </div>
-                </div>
-            }
-            else
-            {
-                PostWithImage postImage = post as PostWithImage;
-                <div class="post" style="margin-bottom: 80px;">
-                    <div class="post-header">
-                        @if (postImage.User.PictureProfile == null)
-                        {
-                            <div class="text-xxl-start">
+                    </div>
+                }
+                else
+                {
+                    PostWithImage postImage = post as PostWithImage;
+                    <div class="post" style="margin-bottom: 80px;">
+                        <div class="post-header">
+                            @if (postImage.User.PictureProfile == null)
+                            {
+                                <div class="text-xxl-start">
+                                    <form asp-action="UserPageWithParams" asp-controller="User" method="get">
+                                        <input type="hidden" name="name" value="@postImage.User.Name" />
+                                        <button type="submit" class="btn text-light"><i class="bi bi-person-circle me-2"></i>@postImage.User.Name.CutName()</button>
+                                    </form>
+                                </div>
+                            }
+                            else
+                            {
                                 <form asp-action="UserPageWithParams" asp-controller="User" method="get">
-                                    <input type="hidden" name="name" value="@postImage.User.Name" />
-                                    <button type="submit" class="btn text-light"><i class="bi bi-person-circle me-2"></i>@postImage.User.Name.CutName()</button>
+                                    <input type="hidden" name="name" value="@post.User.Name" />
+                                    <button class="btn text-light"><img src="data:image/png;base64,@(Convert.ToBase64String(postImage.User.PictureProfile))" class="img-fluid rounded-circle me-2" style="width: 40px; height: 40px; object-fit: cover;" /> @post.User.Name.CutName()</button>
                                 </form>
+                            }
+                            <div class="post-meta" style="margin-right: 20px">
+                                <p>@postImage.Date.Duration()</p>
                             </div>
-                        }
-                        else
-                        {
-                            <form asp-action="UserPageWithParams" asp-controller="User" method="get">
-                                <input type="hidden" name="name" value="@post.User.Name" />
-                                <button class="btn text-light"><img src="data:image/png;base64,@(Convert.ToBase64String(postImage.User.PictureProfile))" class="img-fluid rounded-circle me-2" style="width: 40px; height: 40px; object-fit: cover;" /> @post.User.Name.CutName()</button>
-                            </form>
-                        }
-                        <div class="post-meta" style="margin-right: 20px">
-                            <p>@postImage.Date.Duration()</p>
                         </div>
-                    </div>
-                    <div class="post-content text-xxl-center">
-                        <p>@postImage.Description.CutDescription()</p>
                         <div class="post-content text-xxl-center">
-                            <img src="data:image/png;base64,@(Convert.ToBase64String(postImage.Image))" class="img-fluid" style="max-width: 70%; height: auto;" />
-                        </div>
-                    </div>
-                    <div class="post-content text-xxl-start">
-                        <div class="d-flex justify-content-between mb-3" style="margin-top: 20px;">
-                            <button class="btn btn-outline-primary toggle-comments" data-post-id="@postImage.Id"><i class="bi bi-chat-left-text"></i></button>
-                            <div class="d-flex flex-column">
-                                @if (postImage.Likes != null && postImage.Likes.Any(l => l.User.Name == User.Identity.Name))
-                                {
-                                    <form method="post" asp-action="Dislike" asp-route-id="@postImage.Id" asp-controller="Post" class="me-3">
-                                        <button class="text-xxl-end btn btn-purple" type="submit"><i class="bi bi-heart-fill text-danger"></i> <span class="m-0 text-danger">@postImage.Likes.CountLikes()</span></button>
-                                    </form>
-                                }
-                                else
-                                {
-                                    <form method="post" asp-action="Like" asp-route-id="@postImage.Id" asp-controller="Post" class="me-3">
-                                        <button type="submit" class="btn btn-purple"><i class="bi bi-heart text-danger"></i> <span class="m-0 text-danger">@postImage.Likes.CountLikes()</span></button>
-                                    </form>
-                                }
+                            <p>@postImage.Description.CutDescription()</p>
+                            <div class="post-content text-xxl-center">
+                                <img src="data:image/png;base64,@(Convert.ToBase64String(postImage.Image))" class="img-fluid" style="max-width: 70%; height: auto;" />
                             </div>
                         </div>
-                        <div class="text-xxl">
-                            <div class="post-comments" data-post-id="@postImage.Id" style="display: none;">
-                                <div class="comment">
-                                    <div class="custom-border"></div>
-                                    <p class="text-center text-primary">Comments</p>
-                                    <div class="custom-border"></div>
-                                    @if (postImage.Comments == null || !postImage.Comments.Any())
+                        <div class="post-content text-xxl-start">
+                            <div class="d-flex justify-content-between mb-3" style="margin-top: 20px;">
+                                <button class="btn btn-outline-primary toggle-comments" data-post-id="@postImage.Id"><i class="bi bi-chat-left-text"></i></button>
+                                <div class="d-flex flex-column">
+                                    @if (postImage.Likes != null && postImage.Likes.Any(l => l.User.Name == User.Identity.Name))
                                     {
-                                        <h6 class="text-center">No exist comments in this post</h6>
+                                        <form method="post" asp-action="Dislike" asp-route-id="@postImage.Id" asp-controller="Post" class="me-3">
+                                            <button class="text-xxl-end btn btn-like" type="submit"><i class="bi bi-heart-fill text-danger"></i> <span class="m-0 text-danger">@postImage.Likes.CountLikes()</span></button>
+                                        </form>
                                     }
                                     else
                                     {
-                                        <div class="text-center">
-                                            @foreach (var comment in postImage.Comments)
-                                            {
-                                                <div class="comment-container d-flex align-items-center mb-3">
-                                                    <div class="comment-details">
-                                                        <h9 class="text-primary d-inline-block"><i class="bi bi-person-circle mx-2 text-primary"></i>@comment.User.Name.CutName()</h9>
-                                                        <p class="d-inline-block mx-2">@comment.Text.CutComment()</p>
-                                                    </div>
-                                                    <div class="comment-like ms-auto">
-                                                        @if (comment.Likes != null && comment.Likes.Count() != 0 && postImage.Likes.Any(l => l.User.Name == User.Identity.Name))
-                                                        {
-                                                            <form method="post" asp-action="DislikeComment" asp-route-id="@comment.Id" asp-controller="Post">
-                                                                <button type="submit" class="btn btn-like-comment"><i class="bi bi-heart-fill text-danger"></i> <span class="m-0 text-danger">@comment.Likes.CountLikes()</span></button>
-                                                            </form>
-                                                        }
-                                                        else
-                                                        {
-                                                            <form method="post" asp-action="LikeComment" asp-route-id="@comment.Id" asp-controller="Post">
-                                                                <button type="submit" class="btn btn-like-comment"><i class="bi bi-heart text-danger"></i> <span class="m-0 text-danger">@comment.Likes.CountLikes()</span></button>
-                                                            </form>
-                                                        }
-                                                    </div>
-                                                </div>
-                                                <hr />
-                                            }
-                                        </div>
+                                        <form method="post" asp-action="Like" asp-route-id="@postImage.Id" asp-controller="Post" class="me-3">
+                                            <button type="submit" class="btn btn-like"><i class="bi bi-heart text-danger"></i> <span class="m-0 text-danger">@postImage.Likes.CountLikes()</span></button>
+                                        </form>
                                     }
-                                    <a class="btn btn-outline-primary text-xxl-center mb-3" asp-route-id="@postImage.Id" asp-action="CreateComment" asp-controller="Post"><i class="bi bi-chat-left text-primary"></i> Add Comment</a>
                                 </div>
-                                <form class="add-comment-form" style="display: none;">
-                                    <input type="text" class="form-control mb-3" placeholder="Add a comment..." />
-                                    <button type="submit" class="btn btn-primary">Add</button>
-                                </form>
+                            </div>
+                            <div class="text-xxl">
+                                <div class="post-comments" data-post-id="@postImage.Id" style="display: none;">
+                                    <div class="comment">
+                                        <div class="custom-border"></div>
+                                        <p class="text-center text-primary">Comments</p>
+                                        <div class="custom-border"></div>
+                                        @if (postImage.Comments == null || !postImage.Comments.Any())
+                                        {
+                                            <h6 class="text-center">No exist comments in this post</h6>
+                                        }
+                                        else
+                                        {
+                                            <div class="text-center">
+                                                @foreach (var comment in postImage.Comments)
+                                                {
+                                                    <div class="comment-container d-flex align-items-center mb-3">
+                                                        <div class="comment-details">
+                                                            <h9 class="text-primary d-inline-block"><i class="bi bi-person-circle mx-2 text-primary"></i>@comment.User.Name.CutName()</h9>
+                                                            <p class="d-inline-block mx-2">@comment.Text.CutComment()</p>
+                                                        </div>
+                                                        <div class="comment-like ms-auto">
+                                                            @if (comment.Likes != null && comment.Likes.Count() != 0 && postImage.Likes.Any(l => l.User.Name == User.Identity.Name))
+                                                            {
+                                                                <form method="post" asp-action="DislikeComment" asp-route-id="@comment.Id" asp-controller="Post">
+                                                                    <button type="submit" class="btn btn-like"><i class="bi bi-heart-fill text-danger"></i> <span class="m-0 text-danger">@comment.Likes.CountLikes()</span></button>
+                                                                </form>
+                                                            }
+                                                            else
+                                                            {
+                                                                <form method="post" asp-action="LikeComment" asp-route-id="@comment.Id" asp-controller="Post">
+                                                                    <button type="submit" class="btn btn-like"><i class="bi bi-heart text-danger"></i> <span class="m-0 text-danger">@comment.Likes.CountLikes()</span></button>
+                                                                </form>
+                                                            }
+                                                        </div>
+                                                    </div>
+                                                    <hr />
+                                                }
+                                            </div>
+                                        }
+                                        <a class="btn btn-outline-primary text-xxl-center mb-3" asp-route-id="@postImage.Id" asp-action="CreateComment" asp-controller="Post"><i class="bi bi-chat-left text-primary"></i> Add Comment</a>
+                                    </div>
+                                    <form class="add-comment-form" style="display: none;">
+                                        <input type="text" class="form-control mb-3" placeholder="Add a comment..." />
+                                        <button type="submit" class="btn btn-primary">Add</button>
+                                    </form>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
+                }
             }
-        }
         </div>
         <div class="text-center text-light">
             <form asp-controller="Home" asp-action="SetAmountOfPosts" method="post">
                 <input type="hidden" name="Amount" value="@amountOfPostsHelper.Amount" />
-                <button type="submit" class="btn text-light"><i class="bi bi-arrow-clockwise"></i>More posts</button>
+                <button type="submit" class="btn text-light" id="more-posts-button"><i class="bi bi-arrow-clockwise"></i>More posts</button>
             </form>
         </div>
     }
@@ -267,6 +265,21 @@ else
 
 @section Scripts {
     <script>
+        document.getElementById('more-posts-button').addEventListener('click', () => {
+            const scrollPosition = window.scrollY || window.pageYOffset;
+            sessionStorage.setItem('scrollPosition', scrollPosition);
+        });
+
+        document.querySelectorAll('.btn-like').forEach(btn => {
+            btn.addEventListener('click', () => {
+                const postContent = btn.closest('.post-content');
+                if (postContent) {
+                    const scrollPosition = postContent.getBoundingClientRect().top + window.scrollY - (window.innerHeight / 2);
+                    sessionStorage.setItem('scrollPosition', scrollPosition);
+                }
+            });
+        });
+
         document.querySelectorAll('.toggle-comments').forEach(btn => {
             btn.addEventListener('click', () => {
                 const postId = btn.getAttribute('data-post-id');
@@ -279,6 +292,14 @@ else
             btn.addEventListener('click', (event) => {
                 event.stopPropagation();
             });
+        });
+
+        window.addEventListener('load', () => {
+            const scrollPosition = sessionStorage.getItem('scrollPosition');
+            if (scrollPosition) {
+                window.scrollTo(0, parseInt(scrollPosition, 10));
+                sessionStorage.removeItem('scrollPosition');
+            }
         });
     </script>
 }
